--- a/index.html
+++ b/index.html
@@ -779,11 +779,11 @@
                                             <i class="bi bi-eye on-visible"></i>
                                             <i class="bi bi-eye-slash no-visible"></i>
                                         </button>
-                                        <button class="btn layer-box-content text-start flex-fill d-flex gap-1 align-items-center p-0 m-0">
+                                        <button class="btn layer-box-content text-start flex-fill d-flex gap-1 align-items-center p-0 m-0" style="min-width: 0">
                                             <div class="layer-box-preview">canvas</div>
-                                            <div class="layer-box-detail">
+                                            <div class="layer-box-detail  flex-fill" style="min-width: 0;">
                                                 <div>
-                                                    <div class="layer-box-detail-label"></div>
+                                                    <div class="layer-box-detail-name text-truncate"></div>
                                                 </div>
                                                 <small class="d-flex flex-wrap gap-2 row-gap-1">
                                                     <div class="d-flex gap-1">
