--- a/brush.html
+++ b/brush.html
@@ -104,7 +104,13 @@
             b1.brushConfig.size = 150;
             b1.brushConfig.roundness = 0.4
             b1.brushConfig.angle = -0.25;
-            b1.brushConfig.hardness = 1;
+            b1.brushConfig.sizeJitter = 1;
+            b1.brushConfig.angleJitter = 1;
+            b1.brushConfig.opacityJitter = 1;
+            b1.brushConfig.flowJitter = 1;
+            b1.brushConfig.hueJitter = 1;
+            b1.brushConfig.saturationJitter = 1;
+            b1.brushConfig.brightnessJitter = 1;
             b1.flush();
 
             const c1 = globalThis.c1 =  document.querySelector('#c1');
