--- a/brush.html
+++ b/brush.html
@@ -18,6 +18,9 @@
     <!-- jquery 관련 -->
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script> -->
 
+    <!-- 부트스트랩 아이콘 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <!-- 부트스트랩 5.3.x -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
@@ -176,7 +179,7 @@
                     <form name="formContextConfig" action="" onsubmit="return false;" oninput="b1.setContextConfig(Wc.HtmlUtil.formToObject(this));b1.flush();redraw();  return false" onchange="this.oninput(event); return false">
                         <div class="d-flex flex-wrap gap-1 property-wrap">
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-border-width"></i> 전경색</div>
+                                <div class="form-label mb-0"><i class="bi bi-palette"></i> 전경색</div>
                                 <input type="color" class="form-control form-control-color"  name="foreColor" value="#f40000">
 
                             </div>
@@ -191,7 +194,14 @@
                     <form name="formBrushConfig" class="form-brush-config" action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush(); c1.clear();redraw(); return false" >
                         <div class="d-flex flex-column gap-3 property-wrap">
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-border-width"></i> Size</div>
+                                <div class="form-label mb-0"><i class="bi bi-circle"></i> Shape(모양)</div>
+                                <select name="shape" class="form-select">
+                                    <option value="circle">circle(원)</option>
+                                    <option value="square">square(정사각형)</option>
+                                </select>
+                            </div>                            
+                            <div>
+                                <div class="form-label mb-0"><i class="bi bi-border-width"></i> Size(크기,지름)</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" >
@@ -211,7 +221,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrow-90deg-right"></i> Angle(각도)</div>
+                                <div class="form-label mb-0"><i class="bi bi-radar"></i> Angle(각도)</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="°"  >
@@ -318,7 +328,7 @@
                             </div>
                             <hr class="my-1">
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrow-90deg-right"></i> AngleControl</div>
+                                <div class="form-label mb-0"><i class="bi bi-radar"></i> AngleControl</div>
                                 <select class="form-select " name="angleControl" >
                                     <option selected value="off">OFF</option>
                                     <!-- <option value="penPressure">penPressure</option> -->
@@ -327,7 +337,7 @@
                             </div>
                             <hr class="my-1">
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> HueJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-palette"></i> HueJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -337,7 +347,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> SaturationJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-brightness-alt-high"></i> SaturationJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -347,7 +357,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> BrightnessJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-brightness-high"></i> BrightnessJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -357,7 +367,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> SizeJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-border-width"></i> SizeJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -367,7 +377,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> OpacityJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-transparency"></i> OpacityJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -377,7 +387,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="form-label mb-0"><i class="bi bi-arrows-vertical"></i> AngleJitter</div>
+                                <div class="form-label mb-0"><i class="bi bi-radar"></i> AngleJitter</div>
                                 <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
