브러쉬 마진 자동 계산

--- a/brush.html
+++ b/brush.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko" >
 <head>
-    <title>web canvas 3</title>
+    <title>web canvas 3 - brush</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Content-Style-Type" content="text/css">
@@ -30,9 +30,9 @@
     
     <!-- meta og -->
     
-    <meta property="og:title" content="web canvas 3">
+    <meta property="og:title" content="web canvas 3 - brush">
 
-    <meta property="og:description" content="web canvas 3">
+    <meta property="og:description" content="web canvas 3 - brush">
     <meta name="og:image" content="http://www.mins01.com/img/logo.gif">
     <meta property="og:image:width" content="190">
     <meta property="og:image:height" content="70" />
