--- a/index.html
+++ b/index.html
@@ -1230,12 +1230,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
-                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                        <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
                             <canvas id="brush0" is="wc-brush" width="5" height="5"></canvas>
+                        </div>
+                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                            <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrushConfig" data-brush-key="brush" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush.brushConfig" >
+                        <form name="formBrushConfig" data-brush-key="brush" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush.brushConfig" >
                             <div class="d-flex flex-column gap-3">
                                 <div>
                                     <div class="form-label mb-0"><i class="bi bi-circle"></i> Shape(모양)</div>
@@ -1458,12 +1461,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
-                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                        <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
                             <canvas id="brush1" is="wc-brush" width="5" height="5"></canvas>
+                        </div>
+                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                            <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush1Config" data-brush-key="brush1" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush1.brushConfig" >
+                        <form name="formBrush1Config" data-brush-key="brush1" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush1.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1477,12 +1483,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
-                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                        <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
                             <canvas id="brush2" is="wc-brush" width="5" height="5"></canvas>
+                        </div>
+                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                            <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush2Config" data-brush-key="brush2" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush2.brushConfig" >
+                        <form name="formBrush2Config" data-brush-key="brush2" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush2.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1496,12 +1505,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
-                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                        <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
                             <canvas id="brush3" is="wc-brush" width="5" height="5"></canvas>
+                        </div>
+                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                            <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush3Config" data-brush-key="brush3" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush3.brushConfig" >
+                        <form name="formBrush3Config" data-brush-key="brush3" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush3.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1515,12 +1527,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
-                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                        <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
                             <canvas id="eraser" is="wc-brush" width="5" height="5"></canvas>
+                        </div>
+                        <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                            <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formEraserConfig" data-brush-key="eraser" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.eraser.brushConfig" >
+                        <form name="formEraserConfig" data-brush-key="eraser" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.eraser.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1532,6 +1547,16 @@
                 WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formBrush2Config);
                 WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formBrush3Config);
                 WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formEraserConfig);
+                window.addEventListener('load',(event)=>{
+                    editor.wcSyncHandler.sync(document.formBrushConfig.closest('.modal'));
+                    editor.wcSyncHandler.sync(document.formBrush2Config.closest('.modal'));
+                    editor.wcSyncHandler.sync(document.formBrush3Config.closest('.modal'));
+                    editor.wcSyncHandler.sync(document.formEraserConfig.closest('.modal'));
+                    document.formBrushConfig.oninput();
+                    document.formBrush2Config.oninput();
+                    document.formBrush3Config.oninput();
+                    document.formEraserConfig.oninput();
+                })
             }
         </script>
 
