--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrushConfig" data-brush-key="brush" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush.brushConfig" >
+                        <form name="formBrushConfig" data-brush-key="brush" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush.brushConfig" >
                             <div class="d-flex flex-column gap-3">
                                 <div>
                                     <div class="form-label mb-0"><i class="bi bi-circle"></i> Shape(모양)</div>
@@ -1469,7 +1469,7 @@
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush1Config" data-brush-key="brush1" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush1.brushConfig" >
+                        <form name="formBrush1Config" data-brush-key="brush1" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush1.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1491,7 +1491,7 @@
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush2Config" data-brush-key="brush2" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush2.brushConfig" >
+                        <form name="formBrush2Config" data-brush-key="brush2" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush2.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1513,7 +1513,7 @@
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formBrush3Config" data-brush-key="brush3" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.brush3.brushConfig" >
+                        <form name="formBrush3Config" data-brush-key="brush3" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush3.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1535,7 +1535,7 @@
                         </div>
                     </div>
                     <div class="modal-body brush-config">
-                        <form name="formEraserConfig" data-brush-key="eraser" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); WcHelper.syncModalBrushPreviewCanvas(this); return false" data-wc-sync-form="editor.eraser.brushConfig" >
+                        <form name="formEraserConfig" data-brush-key="eraser" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.eraser.brushConfig" >
                         </form>
                     </div>
                 </div>
@@ -1548,14 +1548,15 @@
                 WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formBrush3Config);
                 WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formEraserConfig);
                 window.addEventListener('load',(event)=>{
-                    editor.wcSyncHandler.sync(document.formBrushConfig.closest('.modal'));
-                    editor.wcSyncHandler.sync(document.formBrush2Config.closest('.modal'));
-                    editor.wcSyncHandler.sync(document.formBrush3Config.closest('.modal'));
-                    editor.wcSyncHandler.sync(document.formEraserConfig.closest('.modal'));
-                    document.formBrushConfig.oninput();
-                    document.formBrush2Config.oninput();
-                    document.formBrush3Config.oninput();
-                    document.formEraserConfig.oninput();
+                    // 브러시가 draw 하면 미리보기를 다시 그린다.
+                    editor.brush.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
+                    editor.brush2.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
+                    editor.brush3.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
+                    editor.eraser.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target,true); })
+                    WcHelper.syncModalBrushPreviewCanvas(editor.brush);
+                    WcHelper.syncModalBrushPreviewCanvas(editor.brush2);
+                    WcHelper.syncModalBrushPreviewCanvas(editor.brush3);
+                    WcHelper.syncModalBrushPreviewCanvas(editor.eraser,true);
                 })
             }
         </script>
