textLayer.html 작업중

--- a/textLayer.html
+++ b/textLayer.html
@@ -50,7 +50,7 @@
     <script type="module">
       
       import HtmlUtil from "./wc/lib/HtmlUtil.js"
-      import TextLayer from "./wc/element/textLayer.js";
+      import TextLayer from "./wc/element/TextLayer.js";
       TextLayer.defineCustomElements();
       globalThis.Wc = {HtmlUtil , TextLayer}
       
