--- a/index.html
+++ b/index.html
@@ -1017,14 +1017,20 @@
                     </div>
                     <div class="modal-body">
                         <form action="" onsubmit="if(this.openfile.files.length){ editor.insertLayerFromFile(this.openfile.files[0]); this.reset() }else{ alert('Select a file(image file)')}; return false;" >
+                            <div>
+                                <div class="form-text mb-0">Insert Layer</div>
+                                <div class="d-flex gap-3">
+                                    <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.addLayer();editor?.document?.layer.flush();"><i class="bi bi-file-plus"></i> Normal Layer</button>
+                                    <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.addLayer('TextLayer');editor?.document?.layer.flush();"><i class="bi bi-file-text"></i> Text layer</button>
+                                </div>
+                            </div>
+                            <hr>
                             <h5>Local image file</h5>
                             <div class="input-group input-group-lg">
                                 <input type="file" class="form-control" name="openfile" accept="image/*">
+                                <button type="submit" class="btn btn-primary" ><i class="bi bi-file-plus"></i> insert</button>
                             </div>
                             <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일만 지원됩니다.</div>
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-primary" ><i class="bi bi-file-plus"></i> INSERT</button>
-                            </div>
                         </form>
                     </div>
                 </div>
