--- a/textLayer.html
+++ b/textLayer.html
@@ -38,6 +38,9 @@
 
     <!-- //meta og -->
 
+<!-- 부트스트랩 아이콘 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="third_party/ui-input-stepper/ui-input-stepper.css">
     <script src="third_party/ui-input-stepper/UiInputStepper.js"></script>
     <script>
@@ -109,25 +112,25 @@
         <div class="card-body">
           <form name="form_text" action="" oninput="textlayer.setText(this.text.value);textlayer.draw();">
             <div>
-              <div class="form-text mb-0">Text</div>
+              <div class="form-text mb-0"><i class="bi bi-body-text"></i> Text</div>
               <textarea name="text" rows="5" class="form-control"></textarea>
             </div>
           </form>
           <hr>
           <form name="form_textConfig" class="d-grid gap-3" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));" oninput="textlayer.textConfig.assignFrom(Wc.HtmlUtil.formToObject(this));textlayer.draw();" onchange="this.oninput(event);">
             <div>
-              <div class="form-text mb-0">색상</div>
+              <div class="form-text mb-0"><i class="bi bi-palette"></i> Color</div>
               <div><input type="color" class="form-control form-control-color w-100" name="textColor" value="#000000"></div>
             </div>
             <div>
-              <div class="form-text mb-0">fontStyle</div>
+              <div class="form-text mb-0"><i class="bi bi-type-italic"></i> fontStyle</div>
               <select name="fontStyle" class="form-select">
                 <option value="normal">normal</option>
                 <option value="italic">italic</option>
               </select>
             </div>
             <div>
-              <div class="form-text mb-0">fontWeight</div>
+              <div class="form-text mb-0"><i class="bi bi-type-bold"></i> fontWeight</div>
               <select name="fontWeight" class="form-select">
                 <option value="normal">normal</option>
                 <option value="bold">bold</option>
@@ -145,7 +148,7 @@
               </select>
             </div>
             <div>
-              <div class="form-text mb-0">fontSize(px)</div>
+              <div class="form-text mb-0"><i class="bi bi-fonts"></i> fontSize(px)</div>
               <div class="input-group ui-input-stepper">
                 <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                 <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" >
@@ -155,7 +158,7 @@
               </div>
             </div>
             <div>
-              <div class="form-text mb-0">lineHeight(em)</div>
+              <div class="form-text mb-0"><i class="bi bi-arrows-vertical"></i> lineHeight(em)</div>
               <div class="input-group ui-input-stepper">
                 <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                 <div class="form-control ui-input-stepper-data-value" data-value-suffix="em" >
@@ -165,7 +168,7 @@
               </div>
             </div>
             <div>
-              <div class="form-text mb-0">fontFamily</div>
+              <div class="form-text mb-0"><i class="bi bi-type"></i> fontFamily</div>
               <select name="fontFamily" class="form-select">
                 <option value="sans-serif">sans-serif (기본 글꼴)</option>
                 <option value="serif">serif</option>
@@ -189,7 +192,7 @@
               </select>
             </div>
             <div>
-              <div class="form-text mb-0">textPadding</div>
+              <div class="form-text mb-0"><i class="bi bi-distribute-horizontal"></i> textPadding</div>
               <div class="input-group ui-input-stepper">
                 <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                 <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" >
@@ -200,7 +203,7 @@
               <input type="hidden" name="textPaddingUnit" value="px">
             </div>
             <div>
-              <div class="form-text mb-0">textAlign</div>
+              <div class="form-text mb-0"><i class="bi bi-text-center"></i> textAlign</div>
               <select name="textAlign" class="form-select">
                 <option value="start">start</option>
                 <option value="end">end</option>
@@ -210,14 +213,14 @@
               </select>
             </div>
             <div>
-              <div class="form-text mb-0">direction</div>
+              <div class="form-text mb-0"><i class="bi bi-signpost-split"></i> direction</div>
               <select name="direction" class="form-select">
                 <option value="ltr">Left to Right (기본값)</option>
                 <option value="rtl">Right to Left (아랍어, 히브리어 등)</option>
               </select>
             </div>
             <div>
-              <div class="form-text mb-0">fontKerning(자동 자간 조정)</div>
+              <div class="form-text mb-0"><i class="bi bi-alphabet"></i> fontKerning(자동 자간 조정)</div>
               <select name="fontKerning" class="form-select">
                 <option value="auto">auto (기본값)</option>
                 <option value="normal">normal</option>
@@ -227,7 +230,7 @@
             <!-- fontStretch 지원 안되나? 나중에 다시 테스트해보자  -->
             <!-- fontVariantCaps 지원 안할꺼라 -->
             <div>
-              <div class="form-text mb-0">letterSpacing</div>
+              <div class="form-text mb-0"><i class="bi bi-distribute-horizontal"></i> letterSpacing</div>
               <div class="input-group ui-input-stepper">
                 <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                 <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" >
