--- a/index.html
+++ b/index.html
@@ -700,15 +700,15 @@
                                   </select>
                                 </div>
                                 <div>
-                                  <div class="form-label mb-0"><i class="bi bi-distribute-horizontal"></i> textPadding</div>
+                                  <div class="form-label mb-0"><i class="bi bi-distribute-horizontal"></i> padding</div>
                                   <div class="input-group ui-input-stepper">
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                     <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" >
-                                        <input type="range" class="form-range d-block" name="textPaddingNumber" min="-100" max="100" step="1"  value="0">
+                                        <input type="range" class="form-range d-block" name="paddingNumber" min="-100" max="100" step="1"  value="0">
                                     </div>
                                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                                   </div>
-                                  <input type="hidden" name="textPaddingUnit" value="px">
+                                  <input type="hidden" name="paddingUnit" value="px">
                                 </div>
                                 <div>
                                   <div class="form-label mb-0"><i class="bi bi-text-center"></i> textAlign</div>
@@ -838,11 +838,11 @@
                                     </select>
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text" >textPadding</span>
+                                    <span class="input-group-text" >padding</span>
                                     <label class="form-control" role="button">
-                                        <input type="range" class="form-range d-block" name="textPaddingNumber" value="0" step="0.1" min="0" max="100">
+                                        <input type="range" class="form-range d-block" name="paddingNumber" value="0" step="0.1" min="0" max="100">
                                     </label>
-                                    <select name="textPaddingUnit" class="form-select" >
+                                    <select name="paddingUnit" class="form-select" >
                                         <option value="px">px</option>
                                         <option value="em">em</option>
                                     </select>
