verticalAlign, fontBoundingBoxDescent 적용

--- a/textLayer.html
+++ b/textLayer.html
@@ -204,7 +204,7 @@
                 <input type="hidden" name="paddingUnit" value="px">
               </div>
               <div>
-                <div class="form-label mb-0"><i class="bi bi-text-center"></i> textAlign</div>
+                <div class="form-label mb-0"><i class="bi bi-align-center"></i> textAlign</div>
                 <select name="textAlign" class="form-select">
                   <option value="start">start</option>
                   <option value="end">end</option>
@@ -241,8 +241,15 @@
                 </div>
                 <div class="form-text text-end">* 사파리 브라우저 지원 안함</div>
               </div>
+              <div>
+                <div class="form-label mb-0"><i class="bi bi-align-middle"></i> verticalAlign</div>
+                <select name="verticalAlign" class="form-select">
+                  <option value="top">top</option>
+                  <option value="middle">middle</option>
+                  <option value="bottom">bottom</option>
+                </select>
+              </div>
             </div>
-
             
 
             
