wc/draw/DrawText.js 에서 글자 그리는 방법 수정

--- a/textLayer.html
+++ b/textLayer.html
@@ -63,7 +63,7 @@
         const textlayer = window.textlayer = document.querySelector('#textlayer')
         textlayer.textConfig.paddingNumber = 20;
         textlayer.textConfig.fontSizeNumber = 20;
-        textlayer.setText('ABCDXYAV\n한글은 잘 되나요? 잘 되겠죠?\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy\nyyyyyy');
+        textlayer.setText('ABCDXYAV\n한글은 잘 되나요? 잘 되겠죠?\nyyyYYYmmmmMMM\nyyyYYYmmmmMMM\nyyyYYYmmmmMMM\nyyyYYYmmmmMMM\nyyyYYYmmmmMMM');
         textlayer.draw();
        
         Wc.HtmlUtil.objectToForm(textlayer.textConfig,document.form_textConfig)
